--- a/style.css
+++ b/style.css
@@ -23,7 +23,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
+footer {
+    margin-top: auto;
+}
 .provincia {
     cursor: pointer;
     transition: 0.5s;
