--- a/style.css
+++ b/style.css
@@ -87,7 +87,14 @@ footer {
 #opciones{
     display: none;
 }
-
+.letra-separadora {
+    padding: 0.5em;
+  font-size: 2em; 
+  font-weight: bold; 
+    text-align: center; 
+    background-color: #5a93bd;
+    justify-content: center;
+}
 @media (max-width: 768px) {
     .mapa {
         width: 100%;
